tests/NormalTests/paczka1/fuzzy1/99599418.err
Error in line 2: 3sJrJyNu A693 37,2
Error in line 9: Dpd4F1yRg A102 34,2
Error in line 3: AcsjRgsDXiA A102 79,1
Error in line 11: Dpd4F1yRg A13 99,7
Error in line 13: AcsjRgsDXiA A13 32,2
Error in line 14: IL57rXy S397 153,7
Error in line 28: S397 A693 77,5
